tests/fixtures/invalid/pow_bool_str_set.py
# Cannot call pow() with Bool, Str, Set[int]
x = pow(True, "hello", {1, 2, 3})
